# compu-grafica

HelloTriangle/: CMakeLists.txt
HelloTriangle/include/glad/: glad.h
HelloTriangle/src/: Source.cpp
OpenGLProyect/: CMakeLists.txt
OpenGLProyect/src/: Source.cpp
TwoTriangles/: CMakeLists.txt
TwoTriangles/src/: Source.cpp
